# study-collaborative-workflow-nlp

./: .gitignore  .pre-commit-config.yaml  README.md
analysis/: .flake8  README.md  ruff.toml  setup.py
analysis/analysis/: __init__.py  apply_nlp.py  bootstrap.py  collaborative.py  config.py  data.py  format_table.py  gold_data.py  helpers.py  mentionned_charlson.py  metrics.py  prevalence.py  stats.py
analysis/pipelines/: get_stats.py  get_stats_collaborative.py  get_stats_comparing_models.py  mentionned_charlson_comparison.py  run.sh
ecci/: LICENSE  README.md  requirements.txt  setup.py
ecci/ecci/: __init__.py
ecci/ecci/config/: __init__.py  comorbidities.py  db.py
ecci/ecci/icd10/: __init__.py  download.py  helpers.py  icd10.pickle
ecci/ecci/io/: __init__.py  connectors.py  stratification.py  utils.py
ecci/ecci/labelling/: labelling.py
ecci/ecci/ner/: __init__.py  ner.py  pipeline.py  stats.py  utils.py
ecci/ecci/stats/: __init__.py  cohort_stats.py  mentionned_charlson.py  validation_dataset.py
ecci/scripts/: config.cfg  get_entities.py  get_icd10.py  get_notes.py  run.sh
ecci/scripts/analysis/: config.cfg  get_cohort_stats.py  get_mentionned_charlson.py  get_validation_dataset.py  prepare_validation_dataset.py  run.sh
ecci/scripts/chores/: setup.sh  update.sh
ecci_qualifier/: .pre-commit-config.yaml  README.md  docs.txt  mkdocs.yml  poetry.toml  pyproject.toml
ecci_qualifier/docs/: annotation-guide.md  index.md  reproducibility.md  training.md  usage.md
ecci_qualifier/ecci_qualifier/: __init__.py
ecci_qualifier/ecci_qualifier/spacy/: __init__.py  factory.py  model.py
ecci_qualifier/scripts/configs/: inference.cfg  training_camembert_base.cfg  training_camembert_base_old.cfg  training_camembert_eds.cfg  tune.cfg
ecci_qualifier/scripts/train/: sbatch.sh  script.py  script.sh
ecci_qualifier/scripts/tune/ray/: tune.py
ecci_qualifier/scripts/tune/simple/: script.py  script.sh
ecci_qualifier/scripts/tune/simple/collaborative/: script.py  script.sh  tuner.py
ecci_qualifier/scripts/validate/: script.py  script.sh
edsml/: README.md  poetry.toml  pyproject.toml
edsml/edsml/: __init__.py
edsml/edsml/modules/: __init__.py  callback.py  classification_head.py  loss.py  metric.py  model.py  optimizer.py  registry.py  task.py  trainer.py
edsml/edsml/modules/helpers/: attr.py  checkpoints.py  misc.py
edsml/edsml/spacy/: __init__.py
edsml/edsml/spacy/component/: __init__.py  models.py
edsml/edsml/spacy/utils/: align.py  annotation_setters.py  extensions.py  span_getters.py
