[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "*.ipynb",
    "*.ipynb_checkpoints",
]
ignore = ["E501"]
line-length = 100
select = [
    "E",
    "F",
    "W",
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",
    "F811",
]

[tool.poetry]
name = "edsml"
version = "0.2.1"
description = "Easy ML wih PytorchLightning"
readme = "README.md"
authors = ["Thomas PETIT-JEAN <thomas.petitjean@aphp.fr>", "Ariel COHEN <ariel.cohen-ext@aphp.fr>"]
exclude = [".venv", "venv", "scripts"]

[[tool.poetry.source]]
name = "dst"
url = "https://gitlab.eds.aphp.fr/api/v4/groups/497/-/packages/pypi/simple/"
secondary = true

[tool.poetry.dependencies]
python = "~3.7.1"
torch = "==1.12.1"
pytorch-lightning = "==1.8.3"
torchmetrics = "==0.11.0"
pre-commit = "^2.20.0"
rich = "^12.6.0"
pytest = "^7.2.0"
transformers = "^4.25.0"
pandas = "^1.3.0"
datasets = "^2.8.0"
confit = {version = "==0.1.5", source = "dst"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
